Changed relative path for about, logo, index, and pages

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../pages/style.css">
+    <link rel="stylesheet" href="../codequartz.github.io/style.css">
     <title>Fenrir</title>
 </head>
 <header>
-    <a href="../pages/index.html"><img src="../images/fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
+    <a href="../codequartz.github.io/index.html"><img src="../codequartz.github.io/fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
     <h1>Fenrir</h1> <!--Gaming Company Name-->
 </header>
-<p><a href="../pages/about.html">About Us</a></p>
+<p><a href="../codequartz.github.io/about.html">About Us</a></p>
 <p><a href="https://www.twitch.tv/">Twitch</a></p>
 <body>
     <h1></h1>
