EDIT about and html

--- a/about.html
+++ b/about.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../codequartz.github.io/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Fenrir - About Us</title>
 </head>
 <header>
-    <a href="../codequartz.github.io/index.html"><img src="../codequartz.github.io/fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
+    <a href="index.html"><img src="fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
     <h1>Fenrir</h1> <!--Gaming Company Name-->
 </header>
 <body>
     <h3>This is the About Us page of my site</h3>
-    <p><a href="../codequartz.github.io/index.html">Return to home page</a></p>
+    <p><a href="index.html">Return to home page</a></p>
 </body>
 </html>
