EDIT images, index.html, about.html, style.css

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
     <title>Fenrir - About Us</title>
 </head>
 <header>
-    <a href="index.html"><img src="fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
+    <a href="index.html"><img src="../images/fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
     <h1>Fenrir</h1> <!--Gaming Company Name-->
 </header>
 <body>
