--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Fenrir</title>
 </head>
 <header>
-    <a href="../index.html"><img src="../fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
+    <a href="index.html"><img src="fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
     <h1>Fenrir</h1> <!--Gaming Company Name-->
 </header>
-<p><a href="../about.html">About Us</a></p>
+<p><a href="about.html">About Us</a></p>
 <p><a href="https://www.twitch.tv/">Twitch</a></p>
 <body>
-    <h1></h1>
+    <h1>Fenrir</h1>
     <article>
         <section>
             <h2>Heading of Part 1 of an article</h2>
