--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p><a href="about.html">About Us</a></p>
 <p><a href="https://www.twitch.tv/">Twitch</a></p>
 <body>
-    <h1>Fenrir</h1>
+    <h1>Welcome to Fenrir</h1>
     <article>
         <section>
             <h2>Heading of Part 1 of an article</h2>
