EDIT index.html, about.html

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,18 @@
     <a href="index.html"><img src="fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
     <h1>Fenrir</h1> <!--Gaming Company Name-->
 </header>
+<nav>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="#">Games</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
+
 <body>
     <h3>This is the About Us page of my site</h3>
     <p><a href="index.html">Return to home page</a></p>
 </body>
+
 </html>
