--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,15 @@
     <a href="index.html"><img src="fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
     <h1>Fenrir</h1> <!--Gaming Company Name-->
 </header>
-<p><a href="about.html">About Us</a></p>
-<p><a href="https://www.twitch.tv/">Twitch</a></p>
+<nav>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="#">Games</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
+
 <body>
     <h1>Welcome to Fenrir</h1>
     <article>
@@ -29,4 +37,5 @@
         </section>
     </article>
 </body>
+
 </html>
