EDIT index.html, about.html

--- a/about.html
+++ b/about.html
@@ -9,14 +9,15 @@
     <title>Fenrir - About Us</title>
 </head>
 <header>
-    <a href="index.html"><img src="fenrir_logo.png" alt="logo" height="150" width="150"></a> <!--Logo-->
+    <a href="index.html"><img src="fenrir_logo.png" alt="three-headed wolf logo" height="150" width="150"></a> <!--Logo-->
     <h1>Fenrir</h1> <!--Gaming Company Name-->
 </header>
 <nav>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="#">Games</a></li>
+        <li><a href="#">Careers</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
 </nav>
