EDIT index.html, about.html, style.css

--- a/about.html
+++ b/about.html
@@ -5,24 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Fenrir - About Us</title>
 </head>
-<header>
-    <a href="index.html"><img src="fenrir_logo.png" alt="three-headed wolf logo" height="150" width="150"></a> <!--Logo-->
-    <h1>Fenrir</h1> <!--Gaming Company Name-->
-</header>
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="#">Games</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-</nav>
 
 <body>
+    <header>
+        <a href="index.html"><img src="fenrir_logo.png" alt="three-headed wolf logo" height="150" width="150"></a>
+        <!--Logo - color code is #bc0000 -->
+        <h1>Fenrir</h1> <!--Gaming Company Name-->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="#">Games</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h3>This is the About Us page of my site</h3>
     <p><a href="index.html">Return to home page</a></p>
 </body>
