EDIT index.html, style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Fenrir</title>
-    
+
 </head>
 
 <body>
@@ -28,19 +28,19 @@
     </header>
 
     <h1>Welcome to Fenrir</h1>
-    <article>
-        <section>
-            <h2>Heading of Part 1 of an article</h2>
-            <p>A paragraph of text in Part 1</p>
-            <p>Another a paragraph of text in Part 1</p>
-        </section>
-
-        <section>
-            <h2>Heading of Part 2 of an article</h2>
-            <p>A paragraph of text in Part 2</p>
-            <p>Another a paragraph of text in Part 2</p>
-        </section>
-    </article>
+    <main>
+        <article>
+            <section>
+                <h2></h2>
+                <h3></h3>
+                <p></p>
+                <p></p>
+                <h3></h3>
+                <p></p>
+                <p></p>
+             
+        </article>
+    </main>
 </body>
 
 </html>
