EDIT index.html, about.html

--- a/about.html
+++ b/about.html
@@ -26,8 +26,17 @@
         </nav>
     </header>
 
-    <h3>This is the About Us page of my site</h3>
-    <p><a href="index.html">Return to home page</a></p>
+    <h2>Our History</h2>
+    <p>Fenrir is a passion project founded by a group of gaming enthusiasts who wanted to create a platform for players
+        to come together and share their love for video games. Our mission is to provide a space where gamers from all
+        backgrounds can connect, compete, and have fun. <br> <br>
+
+        With a growing library of popular and indie games, Fenrir offers a diverse range of gaming experiences for
+        players of all skill levels. Our community is at the heart of what we do, and we strive to foster a positive and
+        inclusive environment for all players. <br> <br>
+
+        Whether you're a seasoned gamer or just starting out, we welcome you to join us on our journey and become a part
+        of the Fenrir community. Let's game on!</p>
 </body>
 
 </html>
