--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <h1>Welcome to Fenrir</h1>
+    <h1>Welcome to the home of Gaming</h1>
     <main>
         <article>
             <section>
