--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="fenrir_logo.png" alt="three-headed wolf logo" height="100" width="100"></a>
+        <a href="index.html"><img class="logo" src="fenrir_logo.png" alt="three-headed wolf logo" height="100" width="100"></a>
         <!--Logo - color code is #bc0000 -->
-        <h1>Fenrir</h1> <!--Gaming Company Name-->
+        <h1 class="orgname">Fenrir</h1> <!--Gaming Company Name-->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -31,15 +31,26 @@
     <main>
         <article>
             <section>
-                <h2></h2>
-                <h3></h3>
-                <p></p>
-                <p></p>
-                <h3></h3>
-                <p></p>
-                <p></p>
-             
+                <h2>Background</h2>
+                <h3>Who We Are</h3>
+                <p>Fenrir is a dynamic gaming platform where players can come together to explore, compete, and have
+                    fun. Our mission is to provide a diverse range of gaming experiences for players of all skill
+                    levels, and to build a community of gamers who can connect and engage with each other.</p>
+                <p>What sets us apart from other gaming platforms is our commitment to creating a positive and inclusive
+                    environment for all players. Our community is at the heart of what we do, and we strive to foster a
+                    welcoming and respectful culture where everyone can feel comfortable and have fun.</p>
+                <h3>What We Offer</h3>
+                <p>At Fenrir, you'll find a growing library of popular and indie games, along with a range of features
+                    and services designed to enhance your gaming experience. Whether you're looking to join a community
+                    of like-minded players, compete in challenges, or simply enjoy your favorite games, we've got you
+                    covered.</p>
+                <p>If you're a gamer looking for a platform that celebrates your passion and provides you with endless
+                    opportunities for gaming, look no further than Fenrir. Join us today and become a part of the pack!
+                </p>
         </article>
+        <footer>
+            <p>Footer content coming soon...</p>
+        </footer>
     </main>
 </body>
 
