--- a/about.html
+++ b/about.html
@@ -58,13 +58,13 @@
         <section>
             <h2 class="people">Our People</h2>
             <h3>Monique Wright - CEO</h3>
-            <img src="woman_ceo.jpeg" alt="image of woman ceo" height="100" width="100">
+            <img src="woman_ceo.jpeg" alt="image of woman ceo" height="100" width="100" class="staff-img">
             <!--<p>With a passion for gaming and a commitment to building a positive and inclusive community, Monique has
                 been instrumental in shaping the direction and success of the company. Under her guidance,
                 Fenrir has become a leading gaming platform within the gaming industry.</p>-->
             <button onclick="showMonique()">Monique Wright</button>
-            <h3>Yasmine Rodriquez - CFO</h3>
-            <img src="woman_coo.jpg" alt="image of woman coo" height="100" width="100">
+            <h3>Yasmine Rodriquez - COO</h3>
+            <img src="woman_coo.jpg" alt="image of woman coo" height="100" width="100" class="staff-img">
            <!-- <p>Meet Yasmine Rodriquez, the operational powerhouse behind Fenrir. With a background in management and a
                 passion for efficiency, Yasmine has been instrumental in ensuring the smooth and seamless operation
                 of the company. Under her leadership, Fenrir has achieved impressive efficiency and scalability,
@@ -96,8 +96,6 @@
             document.getElementById("staff-img").src = "woman_coo.jpg";
             document.getElementById("staff-text").innerText = "Meet Yasmine Rodriguez, the operational powerhouse behind Fenrir. With a background in management and a passion for efficiency, Yasmine has been instrumental in ensuring the smooth and seamless operation of the company. Under her leadership, Fenrir has achieved impressive efficiency and scalability, allowing the company to continue to grow and expand its offerings to players.";
         }
-
-
     </script>
 </body>
 
