--- a/data.htm
+++ b/data.htm
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Fenrir</title>
-
+    <title>Fenrir - Featured Games</title>
 </head>
 
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="fenrir_logo.png" alt="three-headed wolf logo" height="100" width="100"></a>
+        <a href="index.html"><img class="logo" src="fenrir_logo.png" alt="three-headed wolf logo" height="100"
+                width="100"></a>
         <!--Logo - color code is #bc0000 -->
         <h1 class="orgname">Fenrir</h1> <!--Gaming Company Name-->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="data.htm">Data</a></li>
+                <li><a href="data.htm">Featured Games</a></li>
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">FAQ</a></li>
@@ -27,3 +27,18 @@
             </ul>
         </nav>
     </header>
+    <h2>Some Information about our featured games</h2>
+    <ul class="featgames">
+        <li><img src="https://cdn-prod.scalefast.com/public/assets/img/resized/squareenix-store-v3/a18b016fa0c78acfd4fb601fc879f917_KR_700.jpg" alt="Box art of Final Fantasy 14" width="200" height="300">Final Fantasy XIV</li>
+        <li>Kingdom Hearts 3</li>
+        <li>Harry Potter Legacy</li>
+        <li>God Eater 3</li>
+    </ul>
+    <main>
+        <footer>
+            <p>Footer content coming soon...</p>
+        </footer>
+    </main>
+</body>
+
+</html>
