--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="data.htm">Featured Games</a></li>
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">FAQ</a></li>
