--- a/about.html
+++ b/about.html
@@ -79,8 +79,8 @@
         </section>
         <hr>
 
-        <footer>
-            <p>Footer content coming soon...</p>
+        <footer class="footer-text">
+            <p>Site copyright © 2023 Fenrir</p>
         </footer>
     </main>
 
