--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     opportunities for gaming, look no further than Fenrir. Join us today and become a part of the pack!
                 </p>
         </article>
-        <footer>
-            <p>Footer content coming soon...</p>
+        <footer class="footer-text">
+            <p>Site copyright © 2023 Fenrir</p>
         </footer>
     </main>
 </body>
