EDIT about.html, data.htm, index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="fenrir_logo.png" alt="three-headed wolf logo" height="100" width="100"></a>
+        <a href="index.html"><img class="logo" src="fenrir_logo.png" alt="three-headed wolf logo" height="100"
+                width="100"></a>
         <!--Logo - color code is #bc0000 -->
         <h1 class="orgname">Fenrir</h1> <!--Gaming Company Name-->
         <nav>
@@ -28,8 +29,8 @@
         </nav>
     </header>
 
-    <h1>Welcome to the Home of Gaming</h1>
     <main>
+        <h1>Welcome to the Home of Gaming</h1>
         <article>
             <section>
                 <h2>Background</h2>
@@ -49,10 +50,11 @@
                     opportunities for gaming, look no further than Fenrir. Join us today and become a part of the pack!
                 </p>
         </article>
-        <footer class="footer-text">
-            <p>Site copyright © 2023 Fenrir</p>
-        </footer>
     </main>
+
+    <footer class="footer-text">
+        <p>Site copyright © 2023 Fenrir</p>
+    </footer>
 </body>
 
 </html>
