--- a/data.htm
+++ b/data.htm
@@ -28,9 +28,14 @@
             color: #fff;
         }
 
-        th,
-        td {
+        th,td {
             font-size: 1.2em;
+        }
+
+        main{
+            width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
     <title>Fenrir - Featured Games</title>
