EDIT about.html, data.htm, style.css

--- a/about.html
+++ b/about.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        section img {
+            border-radius: 10px;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            height: 100px;
+            width: 100px;
+        }
+    </style>
     <title>Fenrir - About Us</title>
 </head>
 
@@ -30,7 +38,7 @@
     <main>
         <section>
             <h2>Our History</h2>
-            <img src="fenrir_team.png" alt="picture of gaming company team" width="100" height="100">
+            <img src="fenrir_team.png" alt="picture of gaming company team">
             <p>Founded in 2014, Fenrir was a passion project founded by a group of gaming enthusiasts who wanted to
                 create a
                 platform for players
@@ -59,13 +67,13 @@
         <section>
             <h2 class="people">Our People</h2>
             <h3>Monique Wright - CEO</h3>
-            <img src="woman_ceo.jpeg" alt="image of woman ceo" height="100" width="100" class="staff-img">
+            <img src="woman_ceo.jpeg" alt="image of woman ceo" class="staff-img">
             <!--<p>With a passion for gaming and a commitment to building a positive and inclusive community, Monique has
                 been instrumental in shaping the direction and success of the company. Under her guidance,
                 Fenrir has become a leading gaming platform within the gaming industry.</p>-->
             <button onclick="showMonique()">Monique Wright</button>
             <h3>Yasmine Rodriquez - COO</h3>
-            <img src="woman_coo.jpg" alt="image of woman coo" height="100" width="100" class="staff-img">
+            <img src="woman_coo.jpg" alt="image of woman coo" class="staff-img">
             <!-- <p>Meet Yasmine Rodriquez, the operational powerhouse behind Fenrir. With a background in management and a
                 passion for efficiency, Yasmine has been instrumental in ensuring the smooth and seamless operation
                 of the company. Under her leadership, Fenrir has achieved impressive efficiency and scalability,
