--- a/data.htm
+++ b/data.htm
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
+        body {
+            background: url("https://wallpaper.dog/large/20355544.jpg");
+        }
+
         ul {
             list-style: none;
         }
