--- a/about.html
+++ b/about.html
@@ -65,15 +65,15 @@
                 starting out, we welcome you to join us on our journey and become a part of the Fenrir community.</p>
         </section>
         <section>
-            <h2 class="people">Our People</h2>
+            <!-- <h2 class="people">Our People</h2>
             <h3>Monique Wright - CEO</h3>
-            <img src="woman_ceo.jpeg" alt="image of woman ceo" class="staff-img">
+            <img src="woman_ceo.jpeg" alt="image of woman ceo" class="staff-img"> -->
             <!--<p>With a passion for gaming and a commitment to building a positive and inclusive community, Monique has
                 been instrumental in shaping the direction and success of the company. Under her guidance,
                 Fenrir has become a leading gaming platform within the gaming industry.</p>-->
             <button onclick="showMonique()">Monique Wright</button>
-            <h3>Yasmine Rodriquez - COO</h3>
-            <img src="woman_coo.jpg" alt="image of woman coo" class="staff-img">
+            <!-- <h3>Yasmine Rodriquez - COO</h3>
+            <img src="woman_coo.jpg" alt="image of woman coo" class="staff-img"> -->
             <!-- <p>Meet Yasmine Rodriquez, the operational powerhouse behind Fenrir. With a background in management and a
                 passion for efficiency, Yasmine has been instrumental in ensuring the smooth and seamless operation
                 of the company. Under her leadership, Fenrir has achieved impressive efficiency and scalability,
