--- a/data.htm
+++ b/data.htm
@@ -79,34 +79,39 @@
 
         <table>
             <tr>
-                <th>Final Fantasy XIV</th>
-                <th>Kingdom Hearts 3</th>
-                <th>Harry Potter Legacy</th>
-                <th>God Eater 3</th>
+                <th>Games</th>
+                <th>Price</th>
+                <th>Genre</th>
+                <th>Console</th>
+                <th>Age</th>
             </tr>
             <tr>
+                <td>Final Fantasy XIV</td>
                 <td>$34.99</td>
+                <td>Fantasy/Action/Action</td>
+                <td>PS4</td>
+                <td>12+</td>
+            </tr>
+            <tr>
+                <td>Kingdom Hearts 3</td>
                 <td>$19.99</td>
+                <td>Fantasy/Action/Action</td>
+                <td>PS4</td>
+                <td>12+</td>
+            </tr>
+            <tr>
+                <td>Harry Potter Legacy</td>
                 <td>$60.00</td>
+                <td>Fantasy/Action/Action</td>
+                <td>PS4</td>
+                <td>12+</td>
+            </tr>
+            <tr>
+                <td>God Eater 3</td>
                 <td>$19.99</td>
-            </tr>
-            <tr>
-                <td>Fantasy/Action/Adventure</td>
-                <td>Fantasy/Action/Adventure</td>
-                <td>Fantasy/Action/Adventure</td>
-                <td>Fantasy/Action/Adventure</td>
-            </tr>
-            <tr>
+                <td>Fantasy/Action/Action</td>
+                <td>PS4</td>
                 <td>12+</td>
-                <td>12+</td>
-                <td>14+</td>
-                <td>14+</td>
-            </tr>
-            <tr>
-                <td>Ps4/Ps5</td>
-                <td>Ps4</td>
-                <td>Ps4/Ps5</td>
-                <td>Ps4</td>
             </tr>
         </table>
     </main>
