--- a/data.htm
+++ b/data.htm
@@ -84,28 +84,28 @@
                 <th>Console</th>
                 <th>Age</th>
             </tr>
-            <tr class="game1">
+            <tr class="ffxiv">
                 <td>Final Fantasy XIV</td>
                 <td>$34.99</td>
                 <td>Fantasy/Action/Action</td>
                 <td>PS4</td>
                 <td>12+</td>
             </tr>
-            <tr class="game2">
+            <tr class="kingdomhearts">
                 <td>Kingdom Hearts 3</td>
                 <td>$19.99</td>
                 <td>Fantasy/Action/Action</td>
                 <td>PS4</td>
                 <td>12+</td>
             </tr>
-            <tr class="game3">
+            <tr class="harrypotter">
                 <td>Harry Potter Legacy</td>
                 <td>$60.00</td>
                 <td>Fantasy/Action/Action</td>
                 <td>PS4</td>
                 <td>12+</td>
             </tr>
-            <tr class="game4">
+            <tr class="godeater">
                 <td>God Eater 3</td>
                 <td>$19.99</td>
                 <td>Fantasy/Action/Action</td>
