EDIT data.htm, about.html, index.html, join.htm

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">FAQ</a></li>
+                <li><a href="join.htm">Join</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
