--- a/data.htm
+++ b/data.htm
@@ -58,6 +58,7 @@
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">FAQ</a></li>
+                <li><a href="join.htm">Join</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -134,7 +135,6 @@
 
         findBtn.addEventListener("click", function () {
             const searchTerm = searchInput.value;
-            // Do something with the search term, e.g. search the table for matching rows
             console.log(`Searching for "${searchTerm}"...`);
         });
 
