EDIT style.css, about.html

--- a/about.html
+++ b/about.html
@@ -36,6 +36,10 @@
         </nav>
     </header>
 
+    <section class="grid-container">
+        
+    </section>
+
     <main>
         <section>
             <h2>Our History</h2>
